--- a/roles/db/tasks/main.yml
+++ b/roles/db/tasks/main.yml
@@ -7,7 +7,7 @@
     dest: /etc/yum.repos.d/mariadb.repo
 
 - name: install MariaDB
-  yum: name={{ item }} state=latest
+  dnf: name={{ item }} state=latest
   with_items:
     - MariaDB-server
     - MariaDB-client
