--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -8,6 +8,8 @@
     - git
     - wget
     - htop
+    - unzip
+    - net-tools
 
 # partition and mount the storage volumes
 - name: Create a new xfs primary partition
