--- a/roles/web/tasks/httpd.yml
+++ b/roles/web/tasks/httpd.yml
@@ -36,3 +36,23 @@
 
 - name: apply selinux file context
   command: restorecon -irv /mnt/storage/web
+
+- name: allow httpd to connect to the database
+  command: setsebool -P httpd_can_network_connect_db 1
+
+- name: create vhosts directory
+  file:
+    path: /etc/httpd/vhosts
+    state: directory
+
+- name: add vhost config file to conf.d
+  template:
+    src: templates/vhosts.conf.j2
+    dest: /etc/httpd/conf.d/vhosts.conf
+
+- name: add vhost
+  template:
+    src: templates/website.conf.j2
+    dest: "/etc/httpd/vhosts/{{ domain_name }}.conf"
+  # vars:
+  #   domain_name: "{{ domain_name }}"
