--- a/roles/web/tasks/httpd.yml
+++ b/roles/web/tasks/httpd.yml
@@ -40,6 +40,9 @@
 - name: allow httpd to connect to the database
   command: setsebool -P httpd_can_network_connect_db 1
 
+- name: allow httpd to connect to the internet
+  command: setsebool -P httpd_can_network_connect 1
+
 - name: create vhosts directory
   file:
     path: /etc/httpd/vhosts
